--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -8,8 +8,8 @@
     <div class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
             <div class="row">
-                <div class="col s1">
-                    <i class="fas fa-user-circle prefix"></i>
+                <div class="col s1" id="icon">
+                    <i class="fas fa-question-circle icon-size fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <select id="category_name" name="category_name" class="validate" required>
@@ -27,7 +27,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-bread-slice" id="icon"></i>
+                    <i class="fas fa-bread-slice fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_name" name="recipe_name" value="{{ recipe.recipe_name }}" type="text"
@@ -37,7 +37,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user" id="icon"></i>
+                    <i class="fas fa-user fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" value="{{ recipe.recipe_chef }}" type="text"
@@ -48,7 +48,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-book" id="icon"></i>
+                    <i class="fas fa-book fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" value="{{ recipe.cookbook_name }}" type="text"
@@ -59,7 +59,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-camera" id="icon"></i>
+                    <i class="fas fa-camera fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" value="{{ recipe.recipe_image }}" type="text"
@@ -70,7 +70,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-cog" id="icon"></i>
+                    <i class="fas fa-user-cog fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_difficulty" name="recipe_difficulty" value="{{ recipe.recipe_difficulty }}"
@@ -81,7 +81,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-clock" id="icon"></i>
+                    <i class="fas fa-clock fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" value="{{ recipe.recipe_time }}" type="text"
@@ -92,7 +92,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list" id="icon"></i>
+                    <i class="fas fa-list fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
                     {% for ingredient in recipe.recipe_ingredients %}
@@ -109,7 +109,7 @@
 
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list" id="icon"></i>
+                    <i class="fas fa-list fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     {% for step in recipe.recipe_method %}
