styled profile page and changed btn classes

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,53 +1,56 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col s12">
-            <div class="card">
-                <h3 class="center-align">{{ user.username }}'s Profile</h3>
-            </div>
-        </div>
-    </div>
+<div class="bg-container">
     <div class="container">
-        <div class="row card-panel">
-
-            <div class="col s4">
-                <span class="left-align">Username: </span>
-            </div>
-            <div class="col s8">
-                <span> {{ user.username }}</span><br>
-            </div>
-            <div class="col s4">
-                <span class="left-align">First name: </span>
-            </div>
-            <div class="col s8">
-                <span> {{ user.user_first }}</span><br>
-            </div>
-            <div class="col s4">
-                <span class="left-align">Last name: </span>
-            </div>
-            <div class="col s8">
-                <span> {{ user.user_last }}</span><br>
-            </div>
-            <div class="col s4">
-                <span class="left-align">Email: </span>
-            </div>
-            <div class="col s8">
-                <span> {{ user.user_email }}</span><br>
-            </div>
-            <div class="col s4">
-                <span class="left-align">Password: </span>
-            </div>
-            <div class="col s8">
-                <span> {{ user.password }}</span><br>
+        <div class="row">
+            <div class="col s12">
+                <div class="card">
+                    <h3 class="center-align">{{ user.username }}'s profile</h3>
+                </div>
             </div>
         </div>
-        <div class="row center-align">
-            {% if session.user|lower == user.username|lower %}
-            <a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn-large green">edit</a>
-            <a href="{{ url_for('delete_profile', username=user.username|lower) }}" class="btn-large red">delete</a><br>
-            {% endif %}
+        <div class="container">
+            <div class="row card-panel">
+
+                <div class="col s4">
+                    <span class="left">Username: </span>
+                </div>
+                <div class="col s8">
+                    <span> {{ user.username }}</span><br>
+                </div>
+                <div class="col s4">
+                    <span class="left">First name: </span>
+                </div>
+                <div class="col s8">
+                    <span> {{ user.user_first }}</span><br>
+                </div>
+                <div class="col s4">
+                    <span class="left">Last name: </span>
+                </div>
+                <div class="col s8">
+                    <span> {{ user.user_last }}</span><br>
+                </div>
+                <div class="col s4">
+                    <span class="left">Email: </span>
+                </div>
+                <div class="col s8">
+                    <span> {{ user.user_email }}</span><br>
+                </div>
+                <div class="col s4">
+                    <span class="left">Password: </span>
+                </div>
+                <div class="col s8">
+                    <span> ******** </span><br>
+                </div>
+            </div>
+            <div class="row center-align">
+                {% if session.user|lower == user.username|lower %}
+                <a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn left">edit</a>
+                <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
+                    class="btn red right">delete</a><br>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
