--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -56,17 +56,15 @@
                     <span>Cooking Time:</span><span class="right">{{ recipe.recipe_time }}</span>
                     {% if session.user|lower == recipe.recipe_added|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red waves-effect waves-light">delete</a><br>
+                            class="btn red left">delete</a><br>
                     </div>
                     {% elif session.user|lower == "larder-admin"|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red waves-effect waves-light">delete</a><br>
+                            class="btn red left">delete</a><br>
                     </div>
                     {% endif %}
                     <div class="center-align">
