--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -58,17 +58,13 @@
 
                 {% if session.user|lower == recipe.recipe_added|lower %}
                 <div class="row center-align rec-card">
-                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                        class="btn-large green waves-effect waves-light">edit</a>
-                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                        class="btn-large red waves-effect waves-light">delete</a><br>
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn red left">delete</a><br>
                 </div>
                 {% elif session.user|lower == "larder-admin"|lower %}
                 <div class="row center-align rec-card">
-                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                        class="btn-large green waves-effect waves-light">edit</a>
-                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                        class="btn-large red waves-effect waves-light">delete</a><br>
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn red left">delete</a><br>
                 </div>
                 {% endif %}
             </div>
