--- a/templates/base.html
+++ b/templates/base.html
@@ -94,8 +94,8 @@
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         {% for message in messages %}
-        <div class="row flashes m6 center">
-            {{ message }}
+        <div class="row flashes">
+            <h5 class="m6 center-align">{{ message }}</h5>
         </div>
         {% endfor %}
         {% endif %}
