--- a/templates/sides.html
+++ b/templates/sides.html
@@ -18,9 +18,10 @@
                 <div class="card-content center-align">
                     <p class="card-title activator" id="rec-style">{{ recipe.recipe_name }}<i
                             class="material-icons right"></i></p>
+                    <p>added by {{ recipe.recipe_added}}</p>
+                    <hr>
                     <p class="recipe-p"><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
                             recipe...</a></p>
-                    <p>added by {{ recipe.recipe_added}}</p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title">
@@ -33,21 +34,20 @@
                     <span>Cooking Time:</span><span class="right">{{ recipe.recipe_time }}</span>
                     {% if session.user|lower == recipe.recipe_added|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red waves-effect waves-light">delete</a><br>
+                            class="btn red left">delete</a><br>
                     </div>
                     {% elif session.user|lower == "larder-admin"|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red waves-effect waves-light">delete</a><br>
+                            class="btn red left">delete</a><br>
                     </div>
                     {% endif %}
                     <div class="center-align">
                         <br>
+                        <hr>
                         <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
                             recipe...</a>
                     </div>
