--- a/templates/starters.html
+++ b/templates/starters.html
@@ -17,35 +17,36 @@
                 <div class="card-content center-align">
                     <p class="card-title activator" id="rec-style">{{ recipe.recipe_name }}<i
                             class="material-icons right"></i></p>
+                    <p>added by {{ recipe.recipe_added}}</p>
+                    <hr>
                     <p class="recipe-p"><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
                             recipe...</a></p>
-                    <p>added by {{ recipe.recipe_added}}</p>
                 </div>
                 <div class="card-reveal">
-                    <span class="card-title" id="rec-style">{{ recipe.recipe_name }}<i
-                            class="far fa-times-circle right"></i></span>
-                    <span>Category: {{ recipe.category_name }}</span><br>
-                    <span>Chef: {{ recipe.recipe_chef }}</span><br>
-                    <span>Cookbook: {{ recipe.cookbook_name }}</span><br>
-                    <span>Difficulty: {{ recipe.recipe_difficulty }}</span><br>
-                    <span>Cooking Time: {{ recipe.recipe_time }}</span>
+                    <span class="card-title">
+                        <i class="far fa-times-circle right"></i></span><br>
+                    <span>{{ recipe.recipe_name }}</span><br><br>
+                    <span>Category:</span><span class="right">{{ recipe.category_name }}</span><br>
+                    <span>Chef:</span><span class="right">{{ recipe.recipe_chef }}</span><br>
+                    <span>Cookbook:</span><span class="right">{{ recipe.cookbook_name }}</span><br>
+                    <span>Difficulty:</span><span class="right">{{ recipe.recipe_difficulty }}</span><br>
+                    <span>Cooking Time:</span><span class="right">{{ recipe.recipe_time }}</span>
                     {% if session.user|lower == recipe.recipe_added|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red waves-effect waves-light">delete</a><br>
+                            class="btn red left">delete</a><br>
                     </div>
                     {% elif session.user|lower == "larder-admin"|lower %}
                     <div class="row center-align rec-card">
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                            class="btn-large red waves-effect waves-light">delete</a><br>
+                            class="btn red left">delete</a><br>
                     </div>
                     {% endif %}
-                    <div class="divider"></div>
                     <div class="center-align">
+                        <br>
+                        <hr>
                         <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
                             recipe...</a>
                     </div>
