--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         {% if session.user|lower == "larder-admin"|lower %}
                         <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
                         {% endif %}
-                        {% if session.user %}
+                        {% if session.user|lower %}
                         <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                         <li><a href="{{ url_for('logout') }}">log out</a></li>
@@ -78,7 +78,7 @@
             {% if session.user|lower == "larder-admin"|lower %}
             <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
             {% endif %}
-            {% if session.user %}
+            {% if session.user|lower %}
             <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="{{ url_for('logout') }}">log out</a></li>
