--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -9,7 +9,7 @@
         <form class="col s12" method="POST" action="{{ url_for('add_cookbook') }}">
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-bread-slice" id="icon"></i>
+                    <i class="fas fa-bread-slice fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user" id="icon"></i>
+                    <i class="fas fa-user fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_chef" name="cookbook_chef" type="text" class="validate">
@@ -28,8 +28,8 @@
                 <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="col s1" id="icon">
-                    <i class="fas fa-book"></i>
+                <div class="col s1">
+                    <i class="fas fa-book fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_image" name="cookbook_image" type="text" class="validate">
@@ -39,7 +39,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-camera" id="icon"></i>
+                    <i class="fas fa-camera fa-2x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_amazon" name="cookbook_amazon" type="text" class="validate">
@@ -48,7 +48,17 @@
                 <div class="col s1"></div>
             </div>
             <div class="row">
-                <div class="col s12 center-align">
+                <div class="col s1">
+                    <i class="fas fa-list fa-2x" id="icon"></i>
+                </div>
+                <div class="input-field col s10">
+                    <textarea id="cookbook_desc" name="cookbook_desc" type="text" class="validate"></textarea>
+                    <label for="cookbook_desc">cookbook description</label>
+                </div>
+                <div class="col s1"></div>
+            </div>
+            <div class="row center-align">
+                <div class="col s12">
                     <button class="btn" type="submit">add cookbook</button>
                 </div>
             </div>
