--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -28,33 +28,33 @@
     </div>
     <div class="row">
         <p class="center-align">All books supplied via Amazon</p>
-        {% for book in cookbooks %}
+        {% for cookbook in cookbooks %}
         <div class="col s12 m6 xl4">
             <div class="card">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ book.cookbook_image }}">
+                    <img class="activator" src="{{ cookbook.cookbook_image }}">
                 </div>
                 <div class="card-content center-align">
-                    <span class="card-title activator" id="rec-style">{{ book.cook_name }}<i
+                    <span class="card-title activator" id="rec-style">{{ cookbook.cook_name }}<i
                             class="material-icons right"></i></span>
-                    <span class="card-title" id="rec-style">{{ book.cookbook_name }}</span>
-                    <span>by {{ book.cookbook_chef }}</span>
+                    <span class="card-title" id="rec-style">{{ cookbook.cookbook_name }}</span>
+                    <span>by {{ cookbook.cookbook_chef }}</span>
                     <hr>
                     <div>
                         <a href="{{ url_for('book_recipes') }}" class="btn book">see recipes</a>
                         <span> </span>
-                        <a href="{{ book.cookbook_amazon }}" target="_blank" class="btn">buy now</a>
+                        <a href="{{ cookbook.cookbook_amazon }}" target="_blank" class="btn">buy now</a>
                     </div>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title"><i class="far fa-times-circle right"></i></span><br>
-                    <span>{{ book.cookbook_name }}</span><br>
-                    <span>Chef: {{ book.cookbook_chef }}</span><br>
+                    <span>{{ cookbook.cookbook_name }}</span><br>
+                    <span>Chef: {{ cookbook.cookbook_chef }}</span><br>
                     <hr>
-                    <span>{{ book.cookbook_desc }}</span>
+                    <span>{{ cookbook.cookbook_desc }}</span>
                     {% if session.user|lower == "larder-admin"|lower %}
                     <div class="row center-align rec-card">
-                        <a href="#" class="btn right">edit</a>
+                        <a href="{{ url_for('edit_cookbook', cookbook_id=cookbook._id) }}" class="btn right">edit</a>
                         <a href="#" class="btn red left">delete</a><br>
                     </div>
                     {% endif %}
