restyled edit/canel btns on edit pages

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -123,10 +123,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 center-align">
-                    <a href="{{ url_for('categories') }}" class="btn-large red">cancel</a>
-                    <button type="submit">edit recipe</button>
-                </div>
+                <a href="{{ url_for('all_recipes') }}" class="btn red left">cancel</a>
+                <button type="submit" class="btn right">edit</button>
             </div>
         </form>
     </div>
