--- a/templates/edit_cookbook.html
+++ b/templates/edit_cookbook.html
@@ -62,10 +62,9 @@
                 </div>
                 <div class="col s1"></div>
             </div>
-            <div class="row center-align">
-                <div class="col s12">
-                    <button class="btn" type="submit">add cookbook</button>
-                </div>
+            <div class="row">
+                <a href="{{ url_for('all_books') }}" class="btn red left">cancel</a>
+                <button type="submit" class="btn right">edit</button>
             </div>
     </div>
     </form>
