--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -55,7 +55,8 @@
                     {% if session.user|lower == "larder-admin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_cookbook', cookbook_id=cookbook._id) }}" class="btn right">edit</a>
-                        <a href="#" class="btn red left">delete</a><br>
+                        <a href="{{ url_for('delete_cookbook', cookbook_id=cookbook._id) }}"
+                            class="btn red left">delete</a><br>
                     </div>
                     {% endif %}
 
