--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_DVkNxxKRBYWrwb59uZtBs");
+        })();
+    </script>
     {% block styles %}
     {% endblock %}
     <title>larder</title>
@@ -146,7 +153,10 @@
                     </div>
                     <div class="col l4 s12 center-align">
                         <h5>contact us</h5>
-                        <p class="email">larder-admin@larder.com</p>
+                        <p>
+                            <a class="email" href="mailto:larder-admin@larder.com"><i class="far fa-envelope fa-2x"></i>
+                                larder-admin@larder.com</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -163,8 +173,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}""></script>
-    <script src=" {{ url_for('static', filename='js/recipe.js') }}""></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src=" {{ url_for('static', filename='js/recipe.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/sendEmail.js') }}"></script>
     {% block scripts %}
     {% endblock%}
 </body>
