changed card img sizing

--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="card-content center-align">
                     <span class="card-title activator" id="rec-style">{{ cookbook.cook_name }}<i
-                            class="material-icons right"></i></span>
+                            class="right"></i></span>
                     <span class="card-title" id="rec-style">{{ cookbook.cookbook_name }}</span>
                     <span>by {{ cookbook.cookbook_chef }}</span>
                     <hr>
