--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -9,11 +9,11 @@
         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
             <div class="row">
                 <div class="col s1" id="icon">
-                    <i class="fas fa-question-circle icon-size fa-2x"></i>
+                    <i class="fas fa-question-circle icon-size fa-1x"></i>
                 </div>
                 <div class="input-field col s10">
                     <select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Which category does your recipe belong to?</option>
+                        <option value="" disabled selected>recipe category</option>
                         {% for category in categories %}
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-bread-slice fa-2x" id="icon"></i>
+                    <i class="fas fa-bread-slice fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_name" name="recipe_name" type="text" class="validate">
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user fa-2x" id="icon"></i>
+                    <i class="fas fa-user fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" type="text" class="validate">
@@ -44,7 +44,7 @@
             </div>
             <div class="row">
                 <div class="col s1" id="icon">
-                    <i class="fas fa-book fa-2x"></i>
+                    <i class="fas fa-book fa-1x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-camera fa-2x" id="icon"></i>
+                    <i class="fas fa-camera fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" type="text" class="validate">
@@ -64,7 +64,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-cog fa-2x" id="icon"></i>
+                    <i class="fas fa-user-cog fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate">
@@ -74,7 +74,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-clock fa-2x" id="icon"></i>
+                    <i class="fas fa-clock fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" type="text" class="validate">
@@ -84,7 +84,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list fa-2x" id="icon"></i>
+                    <i class="fas fa-list fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
                     <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
@@ -98,7 +98,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list fa-2x" id="icon"></i>
+                    <i class="fas fa-list fa-1x" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     <textarea id="recipe_method" type="text" name="recipe_method"></textarea>
