--- a/templates/register.html
+++ b/templates/register.html
@@ -13,27 +13,32 @@
 
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix"></i>
-                        <input id="username" name="username" type="text" class="validate">
+                        <input id="username" name="username" type="text" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">username</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix"></i>
-                        <input id="user_first" name="user_first" type="text" class="validate">
+                        <input id="user_first" name="user_first" type="text" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="user_first">first name</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix"></i>
-                        <input id="user_last" name="user_last" type="text" class="validate">
+                        <input id="user_last" name="user_last" type="text" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="user_last">last name</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-envelope prefix"></i>
-                        <input id="user_email" name="user_email" type="text" class="validate">
+                        <input id="user_email" name="user_email" type="text" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="user_email">user email</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-user-lock prefix"></i>
-                        <input id="password" name="password" type="password" class="validate">
+                        <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">password</label>
                     </div>
                     <div class="row center-align">
