added required and pattern spec to register.html

--- a/templates/register.html
+++ b/templates/register.html
@@ -19,20 +19,20 @@
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix"></i>
-                        <input id="user_first" name="user_first" type="text" minlength="5" maxlength="15"
-                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <input id="user_first" name="user_first" type="text" minlength="3" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{3,15}$" class="validate" required>
                         <label for="user_first">first name</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix"></i>
-                        <input id="user_last" name="user_last" type="text" minlength="5" maxlength="15"
-                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <input id="user_last" name="user_last" type="text" minlength="3" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{3,15}$" class="validate" required>
                         <label for="user_last">last name</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="fas fa-envelope prefix"></i>
-                        <input id="user_email" name="user_email" type="text" minlength="5" maxlength="15"
-                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <input id="user_email" name="user_email" type="text" minlength="5" maxlength="25"
+                            pattern="^[a-zA-Z0-9@.]{5,25}*$" class="validate" required>
                         <label for="user_email">user email</label>
                     </div>
                     <div class="input-field col s12">
