--- a/templates/register.html
+++ b/templates/register.html
@@ -7,8 +7,8 @@
             <div class="col s12 m3">
                 <h4 class="center-align">register</h4>
             </div>
-            <div class="col s12 m9 offset-m4">
-                <form onsubmit="return sendMail(this);" class="col s12 m8 offset-m2" id="contact" method="POST"
+            <div class="col s12 m9">
+                <form onsubmit="return sendMail(this);" class="col s12 m8 offset-m4" id="contact" method="POST"
                     action="{{ url_for('register') }}">
 
                     <div class="input-field col s12">
