--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -45,8 +45,11 @@
                         <span class="card-title-book" id="rec-style">{{ cookbook.cookbook_name }}</span>
                         <p class="book-chef">by {{ cookbook.cookbook_chef }}</p>
                         <hr>
-
-                        <a href="{{ url_for('book_recipes') }}" class="btn left">recipes</a>
+                        <form id="recipe-search" action="{{ url_for('search')}}" method="POST">
+                            <input type="text" name="query" value="{{ cookbook.cookbook_chef }}" id="query">
+                            <label for="query"></label>
+                        </form>
+                        <button type="submit" form="recipe-search" class="btn left">recipes</button>
                         <a href="{{ cookbook.cookbook_amazon }}" target="_blank" class="btn right">buy now</a>
                     </div>
                 </div>
