added text-dec and color to a link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,3 +181,8 @@ a.social:hover {
   .card-title-chef {
       font-weight: 600;
   }
+
+  a.message {
+      text-decoration: underline;
+      color: #2c642e;
+  } 
