--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -29,7 +29,7 @@
     <div class="row">
         <p class="center-align">All books supplied via Amazon</p>
         <p class="center-align">If you've added a recipe and the cookbook isn't listed below - send us a <a
-                href="mailto:larder-admin@larder.com">message</a>!
+                class="message" href="mailto:larder-admin@larder.com">message</a>!
         </p>
 
         {% for cookbook in cookbooks %}
