added code comments to app.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,7 @@
                     <div class="col l4 s12 center-align">
                         <h5 class="white-text">larder</h5>
                         <p class="grey-text text-lighten-4">a collection of your favourite recipes from your favourite
-                            chef's!</p>
+                            cooks and chefs!</p>
                     </div>
                     <div class="col l4 s12 center-align">
                         <h5 class="white-text">social</h5>
