--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,7 +11,7 @@
             <div class="col s12 l6 center-align">
                 <ul>
                     <li class="center-align"><a class="land-link" href="{{ url_for('all_recipes') }}">recipes from your
-                            favourite chef's!</a>
+                            favourite cooks and chefs!</a>
                     </li>
                     {% if session.user|lower %}
                     <li class="center-align"><a class="land-link" href="{{ url_for('add_recipe') }}">add your own
