cahnged label info on cookbook_image

--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_image" name="cookbook_image" type="text" class="validate">
-                    <label for="cookbook_image">cookbook image</label>
+                    <label for="cookbook_image">cookbook image - add Amazon image URL here</label>
                 </div>
                 <div class="col s1"></div>
             </div>
